implementation of intership controller and service , update of the class SecurityConfig and test the endpoint
